<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F9FF"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingTop="24dp"
        android:paddingEnd="24dp"
        android:paddingBottom="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/ar_logistica"
            android:textColor="#0B4F9C"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/iniciar_sesion"
            android:textColor="#222222"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/correo_electronico"
            android:textColor="#333333"
            android:textSize="16sp"
            android:textStyle="bold" />

         <EditText
            android:id="@+id/edtCorreo"
            android:layout_width="320dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:autofillHints="emailAddress"
            android:hint="@string/ingrese_correo"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColor="#222222"
            android:textColorHint="#777777"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/contrasena"
            android:textColor="#333333"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtContrasena"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="8dp"
            android:hint="@string/ingrese_contrasena"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:padding="12dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tipo_usuario"
            android:textColor="#333333"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerRol"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#1473E6"
            android:paddingStart="12dp"
            android:paddingEnd="12dp" />

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="320dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/ingresar"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/olvidaste_contrasena"
            android:textColor="#0B4F9C"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/crear_cuenta"
            android:textColor="#1473E6"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>